restyle homepage and add product page for mobile

--- a/index.html
+++ b/index.html
@@ -9,26 +9,21 @@
   </head>
   <body>
     <header>
-      <div class="logos">
-        <ul>
-          <li>
-            <img
-              src="./assets/images/casalina_logo.svg"
-              class="logo--img"
-              alt="casalina_logo"
-            />
-          </li>
-          <li>
-            <img
-              src="./assets/images/bsr_logo.svg"
-              class="logo--img"
-              alt="bsr_logo"
-            />
-          </li>
-        </ul>
-      </div>
       <nav>
         <ul class="menu">
+          <li class="menu--item menu--logo"> <img
+            src="./assets/images/casalina_logo.svg"
+            class="logo--img"
+            alt="casalina_logo"
+          />
+        </li>
+        <li class="menu--item menu--logo">
+          <img
+          src="./assets/images/bsr_logo.svg"
+          class="logo--img"
+          alt="bsr_logo"
+        />
+       </li>
           <li class="menu--item"><a href="">Events</a></li>
           <li class="menu--item"><a href="">Qui sommes nous</a></li>
           <li class="menu--item"><a href="">Contact</a></li>
@@ -82,13 +77,13 @@
       </section>
     </main>
     <footer>
-      <div class="config-color">
+      <!-- <div class="config-color">
         <div class="pointer">
           <div class="round"></div>
           Change color
         </div>
-      </div>
-      <div class="color--container">
+      </div> -->
+      <!-- <div class="color--container">
         <div class="round color-1"></div>
         <div class="round color-2"></div>
         <div class="round color-3"></div>
@@ -96,7 +91,7 @@
         <div class="round color-5"></div>
         <div class="round color-6"></div>
         <div class="round color-7"></div>
-      </div>
+      </div> -->
       <div class="logos">
         <ul>
           <li>
