style product page for laptop

--- a/products.html
+++ b/products.html
@@ -43,7 +43,7 @@
         </ul>
         <div class="product--footer">
           <p class="product--price">25 €</p>
-          <button class="btn btn--primary"><i class="cart"></i></button>
+          <button class="btn btn--primary"><span>Order</span> <i class="cart"></i></button>
         </div>
       </div>
       <div class="product">
@@ -59,7 +59,7 @@
         </ul>
         <div class="product--footer">
           <p class="product--price">40 €</p>
-          <button class="btn bg--blue"><i class="cart"></i></button>
+          <button class="btn bg--blue"><span>Order</span> <i class="cart"></i></button>
         </div>
 
       </div>
@@ -77,7 +77,7 @@
         </ul>
         <div class="product--footer">
           <p class="product--price">60 €</p>
-          <button class="btn bg--yellow"><i class="cart"></i></button>
+          <button class="btn bg--yellow"><span>Order</span><i class="cart"></i></button>
         </div>
 
       </div>
