--- a/products.html
+++ b/products.html
@@ -13,17 +13,17 @@
   <header>
     <nav>
       <ul class="menu">
-        <li class="menu--item menu--logo"> <img src="./assets/images/casalina_logo.svg" class="logo--img"
-            alt="casalina_logo" />
+        <li class="menu--item menu--logo"> <a href="/index.html"><img src="./assets/images/casalina_logo.svg"
+              class="logo--img" alt="casalina_logo" /></a>
         </li>
         <li class="menu--item menu--logo">
-          <img src="./assets/images/bsr_logo.svg" class="logo--img" alt="bsr_logo" />
+          <a href="/index.html"> <img src="./assets/images/bsr_logo.svg" class="logo--img" alt="bsr_logo" /></a>
         </li>
         <li class="menu--item"><a href="">Events</a></li>
         <li class="menu--item"><a href="">Qui sommes nous</a></li>
         <li class="menu--item"><a href="">Contact</a></li>
         <li class="menu--item">
-          <a class="btn btn--primary" href="">Commander</a>
+          <a class="btn btn--primary" href="/products.html">Commander</a>
         </li>
       </ul>
     </nav>
