--- a/index.html
+++ b/index.html
@@ -20,14 +20,34 @@
           <a href="/index.html"> <img src="./assets/images/bsr_logo.svg" class="logo--img" alt="bsr_logo" /></a>
         </li>
         <li class="menu--item"><a href="">Events</a></li>
-        <li class="menu--item"><a href="">Qui sommes nous</a></li>
+        <li class="menu--item menu--item--dropdown"><a>Qui sommes nous</a>
+          <ul class="dropdown--menu">
+            <li class="dropdown--item"><a href="/pages/bsr.html">BSR</a></li>
+            <li class="dropdown--item"><a href="/pages/casalina.html">Casalina</a></li>
+          </ul>
+        </li>
         <li class="menu--item"><a href="">Contact</a></li>
         <li class="menu--item">
-          <a class="btn btn--primary" href="/products.html">Commander</a>
+          <!-- <a class="btn btn--primary" href="/pages/products.html">Commander</a> -->
         </li>
       </ul>
+      <button class="btn btn--menu icon--hamburger">
+      </button>
+      <ul class="menu--xs">
+        <li class="menu--item--xs"><a href="/pages/events.html">Events</a></li>
+        <li class="menu--item--xs"><a class="menu--item--dropdown--xs">Qui sommes
+            nous ?</a>
+          <ul class="dropdown--menu--xs">
+            <li class="dropdown--item--xs"><a href="/pages/bsr.html">BSR</a></li>
+            <li class="dropdown--item--xs"><a href="/pages/casalina.html">Casalina</a></li>
+          </ul>
+        </li>
+        <li class="menu--item--xs"><a href="/pages/contact.html">Contact</a></li>
+        <li class="menu--item--xs cta"><a href="/pages/products.html">Commander</a></li>
+      </ul>
     </nav>
-    <button class="btn btn--menu"></button>
+
+
   </header>
   <main class="color-1">
     <section class="hero">
@@ -110,15 +130,58 @@
   </footer>
 
   <script>
-    const color_container = document.querySelector('.color--container');
-    const color1 = document.querySelector('.color-1');
-    const maiin = document.querySelector('main');
-    color_container.addEventListener('click', (e) => {
-      const newColor = e.target.classList[e.target.classList.length - 1];
-      if (newColor.includes('color-')) {
-        maiin.className = newColor;
+
+    const isElementDisplayed = (ele) => {
+      return window.getComputedStyle(ele).display !== 'none';
+    }
+
+    // menu desktop
+    const menuItemDropdown = document.querySelector('.menu--item--dropdown');
+    const dropdownMenu = document.querySelector('.dropdown--menu');
+    menuItemDropdown.addEventListener('click', (e) => {
+      dropdownMenu.style.display = 'block';
+    });
+
+    // menu phone
+    const btnMenu = document.querySelector('.btn--menu');
+    const menuXs = document.querySelector('.menu--xs');
+    const menuItemDropdownXs = document.querySelector('.menu--item--dropdown--xs');
+    const dropdownMenuXS = document.querySelector('.dropdown--menu--xs');
+
+    const HAMBURGER = 'icon--hamburger';
+    const CLOSE = 'icon--close';
+    btnMenu.addEventListener('click', (e) => {
+      if (e.target.classList.contains(HAMBURGER)) {
+        e.target.classList.remove(HAMBURGER);
+        e.target.classList.add(CLOSE);
+        menuXs.style.display = 'block';
+      } else {
+        e.target.classList.add(HAMBURGER);
+        e.target.classList.remove(CLOSE);
+        menuXs.style.display = 'none';
       }
     });
+
+    menuItemDropdownXs.addEventListener('click', (e) => {
+      if (!isElementDisplayed(dropdownMenuXS)) {
+        dropdownMenuXS.style.display = 'block';
+      } else {
+        dropdownMenuXS.style.display = 'none';
+      }
+    });
+
+
+
+    // switch color 
+    // const color_container = document.querySelector('.color--container');
+    // const color1 = document.querySelector('.color-1');
+    // const maiin = document.querySelector('main');
+    // color_container.addEventListener('click', (e) => {
+    //   const newColor = e.target.classList[e.target.classList.length - 1];
+    //   if (newColor.includes('color-')) {
+    //     maiin.className = newColor;
+    //   }
+    // });
   </script>
 </body>
 
