--- a/pages/contact.html
+++ b/pages/contact.html
@@ -82,7 +82,7 @@
           <button class="btn btn--primary" style="width: 50%;">Envoyer</button>
         </form>
       </section>
-      <section class="contact--card grid-4-col">
+      <section class="contact--card contact--info">
         <div class="border-card"></div>
         <img src="../assets/images/bsr_logo.svg" alt="bsr_logo">
         <div class="contact-info">
@@ -125,8 +125,6 @@
       </ul>
     </div>
   </footer>
-
-
 </body>
 
 </html>
