--- a/pages/casalina.html
+++ b/pages/casalina.html
@@ -119,6 +119,8 @@
           <figcaption>
             <p>La première mission bénévole a permis d’apporter un bon coup de neuf à la maison abandonnée depuis plus
               de 10 ans.
+            </p>
+            <p>
               Pendant 1 mois, une quarantaine de bruxellois et italiens ont permis de rétablir l’électricité, l’eau du
               puits, de remettre en état les sanitaires, les murs, la cuisine et de meubler les différentes pièces.
             </p>
@@ -126,37 +128,46 @@
           <img src="../assets/images/casalina/campagnaEVita1.png" alt="campagna e vita">
         </figure>
         <figure>
-          <figcaption>C’était aussi la première rencontre entre les bénévoles et les locaux ne parlant pas la même
-            langue. Les francophones commencent tout juste à comprendre la diversité de la culture culinaire italienne
-            et ses nombreuses règles d’or, tandis que les spinazzoliens perçoivent rapidement que pour les belges, la
-            bière vaut de l’or!
-            Cette belle expérience a pu séduire plusieurs participants et leur donner l’impulsion de s’engager dans le
-            projet à plus long terme.</figcaption>
-          <img src="../assets/images/casalina/campagnaEVita2.png" alt="campagna e vita">
+          <img src="../assets/images/casalina/campagnaEVita2.png" class="campagna-e-vita--last-img"
+            alt="campagna e vita">
+          <figcaption>
+            <p>C’était aussi la première rencontre entre les bénévoles et les locaux ne parlant pas la même
+              langue. Les francophones commencent tout juste à comprendre la diversité de la culture culinaire italienne
+              et ses nombreuses règles d’or, tandis que les spinazzoliens perçoivent rapidement que pour les belges, la
+              bière vaut de l’or!
+              Cette belle expérience a pu séduire plusieurs participants et leur donner l’impulsion de s’engager dans le
+              projet à plus long terme.</p>
+          </figcaption>
         </figure>
       </div>
 
 
       <h2 class="subtitle">El Caporalato</h2>
       <div class="el-caporalato">
-        <p>Le secteur agricole est l'un des principaux moteurs de développement du sud de l'Italie, capable de générer
-          des emplois et donc d'attirer des dizaines de milliers de travailleurs saisonniers. Une grande partie de la
-          production nationale d’agrumes, d’huiles, de céréales, de vin, de blé et des fruits et légumes est issue des
-          régions du sud. De la Sicile jusqu’aux Pouilles, les travailleurs migrants se déplacent tout au long de
-          l'année de région en région pour participer à la récolte des fruits et légumes de saison.</p>
-        <img src="../assets/images/casalina/elCaporalato.png" alt="el caporalato">
+        <div class="guys reverse-order-xs">
+          <img src="../assets/images/casalina/elCaporalato.png" alt="el caporalato">
+          <p>Le secteur agricole est l'un des principaux moteurs de développement du sud de l'Italie, capable de générer
+            des emplois et donc d'attirer des dizaines de milliers de travailleurs saisonniers.</p>
+          <p> Une grande partie de la
+            production nationale d’agrumes, d’huiles, de céréales, de vin, de blé et des fruits et légumes est issue des
+            régions du sud. De la Sicile jusqu’aux Pouilles, les travailleurs migrants se déplacent tout au long de
+            l'année de région en région pour participer à la récolte des fruits et légumes de saison.</p>
+        </div>
 
-        <p>Pour faire le lien entre les exploitants agricoles et la main d'œuvre disponible, il n’existe pas d’organisme
-          légal efficace. C’est principalement ce manquement qui a fait naître un système illégal et criminel:
-          <strong>LE
-            CAPORALATO</strong>.</p>
-        <p>Ce phénomène est particulièrement répandu dans le sud de l’Italie afin de profiter de la présence de
-          main-d'œuvre immigrée. Ce phénomène est particulièrement répandu dans le sud de l’Italie afin de profiter de
-          la présence de main-d'œuvre immigrée. L’Italie étant la porte d'entrée de l'Union européenne pour de
-          nombreuses populations, les migrants s'y retrouvent souvent bloqués pendant plusieurs années en attente d’un
-          permis de séjour ou de travail. Le Caporalato profite de cette situation pour exploiter ces travailleurs
-          migrants et imposer des conditions inhumaines.</p>
-        <img src="../assets/images/casalina/elCaporalota2.png" alt="el caporalato">
+        <div class="girls reverse-order-xs">
+          <img src="../assets/images/casalina/elCaporalota2.png" alt="el caporalato">
+          <p>Pour faire le lien entre les exploitants agricoles et la main d'œuvre disponible, il n’existe pas
+            d’organisme
+            légal efficace. C’est principalement ce manquement qui a fait naître un système illégal et criminel:
+            <strong>LE
+              CAPORALATO</strong>.</p>
+          <p>Ce phénomène est particulièrement répandu dans le sud de l’Italie afin de profiter de la présence de
+            main-d'œuvre immigrée. Ce phénomène est particulièrement répandu dans le sud de l’Italie afin de profiter de
+            la présence de main-d'œuvre immigrée. L’Italie étant la porte d'entrée de l'Union européenne pour de
+            nombreuses populations, les migrants s'y retrouvent souvent bloqués pendant plusieurs années en attente d’un
+            permis de séjour ou de travail. Le Caporalato profite de cette situation pour exploiter ces travailleurs
+            migrants et imposer des conditions inhumaines.</p>
+        </div>
       </div>
     </section>
   </main>
