--- a/pages/casalina.html
+++ b/pages/casalina.html
@@ -119,7 +119,7 @@
           <figcaption class="col-2">
             <span>
               La première mission bénévole a permis d’apporter un bon coup de neuf à la maison abandonnée depuis plus
-              de 10 ans. <br>
+              de 10 ans.
               Pendant 1 mois, une quarantaine
               de </span><span>bruxellois et italiens ont permis de rétablir
               l’électricité, l’eau du
@@ -137,7 +137,8 @@
               même
               langue. Les francophones commencent tout juste à comprendre la diversité de la culture culinaire
               italienne
-              et ses nombreuses règles d’or, tandis </span><span> que les spinazzoliens perçoivent rapidement que pour
+              et ses nombreuses règles d’or, tandis que les </span><span> spinazzoliens perçoivent rapidement que
+              pour
               les belges, la
               bière vaut de l’or!
               Cette belle expérience a pu séduire plusieurs participants et leur donner l’impulsion de s’engager dans
