--- a/index.html
+++ b/index.html
@@ -51,11 +51,14 @@
   </header>
   <main class="color-1">
     <section class="hero">
+      <h1 class="only-for-mobile">
+        Un printemps fertile
+      </h1>
       <figure>
         <img src="./assets/images/hero_picture.svg" alt="" class="hero--picture" />
         <figcaption>
           <h1>Un printemps fertile</h1>
-          <button class="btn btn--primary">Commander</button>
+          <a href="./pages/products.html" class="btn btn--primary">Commander</a>
         </figcaption>
       </figure>
     </section>
