--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </li>
         <li class="menu--item"><a href="./pages/contact.html">Contact</a></li>
         <li class="menu--item">
-          <!-- <a class="btn btn--primary" href="/pages/products.html">Commander</a> -->
+          <a class="btn btn--primary" href="/pages/products.html">Commander</a>
         </li>
       </ul>
       <button class="btn btn--menu icon--hamburger">
