--- a/pages/products.html
+++ b/pages/products.html
@@ -20,12 +20,32 @@
           <a href="/index.html"> <img src="../assets/images/bsr_logo.svg" class="logo--img" alt="bsr_logo" /></a>
         </li>
         <li class="menu--item"><a href="">Events</a></li>
-        <li class="menu--item"><a href="">Qui sommes nous</a></li>
-        <li class="menu--item"><a href="">Contact</a></li>
+        <li class="menu--item menu--item--dropdown"><a>Qui sommes nous</a>
+          <ul class="dropdown--menu">
+            <li class="dropdown--item"><a href="./bsr.html">BSR</a></li>
+            <li class="dropdown--item"><a href="./casalina.html">Casalina</a></li>
+          </ul>
+        </li>
+        <li class="menu--item"><a href="contact.html">Contact</a></li>
         <li class="menu--item">
-          <a class="btn btn--primary" href="/pages/products.html">Commander</a>
+          <a class="btn btn--primary" href="./products.html">Commander</a>
         </li>
       </ul>
+      <button class="btn btn--menu icon--hamburger">
+      </button>
+      <ul class="menu--xs">
+        <li class="menu--item--xs"><a href="./events.html">Events</a></li>
+        <li class="menu--item--xs"><a class="menu--item--dropdown--xs">Qui sommes
+            nous ?</a>
+          <ul class="dropdown--menu--xs">
+            <li class="dropdown--item--xs"><a href="./bsr.html">BSR</a></li>
+            <li class="dropdown--item--xs"><a href="./casalina.html">Casalina</a></li>
+          </ul>
+        </li>
+        <li class="menu--item--xs"><a href="./contact.html">Contact</a></li>
+        <li class="menu--item--xs cta"><a href="./products.html">Commander</a></li>
+      </ul>
+    </nav>
     </nav>
     <button class="btn btn--menu"></button>
   </header>
