--- a/pages/casalina.html
+++ b/pages/casalina.html
@@ -29,7 +29,7 @@
         </li>
         <li class="menu--item"><a href="contact.html">Contact</a></li>
         <li class="menu--item">
-          <!-- <a class="btn btn--primary" href="./products.html">Commander</a> -->
+          <a class="btn btn--primary" href="./products.html">Commander</a>
         </li>
       </ul>
       <button class="btn btn--menu icon--hamburger">
