--- a/pages/products.html
+++ b/pages/products.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="../index.js" defer></script>
   <link rel="stylesheet" href="../style.css" />
   <title>Document</title>
 </head>
@@ -34,7 +35,7 @@
       <button class="btn btn--menu icon--hamburger">
       </button>
       <ul class="menu--xs">
-        <li class="menu--item--xs"><a href="./events.html">Events</a></li>
+        <li class="menu--item--xs"><a href="./bsr#events.html">Events</a></li>
         <li class="menu--item--xs"><a class="menu--item--dropdown--xs">Qui sommes
             nous ?</a>
           <ul class="dropdown--menu--xs">
@@ -45,11 +46,9 @@
         <li class="menu--item--xs"><a href="./contact.html">Contact</a></li>
         <li class="menu--item--xs cta"><a href="./products.html">Commander</a></li>
       </ul>
-    </nav>
-    </nav>
-    <button class="btn btn--menu"></button>
   </header>
   <main class="color-1">
+    <h1>Nos produits</h1>
     <section class="products">
       <div class="product">
         <h2 class="product--title">Fico</h2>
