--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <button class="btn btn--menu icon--hamburger">
       </button>
       <ul class="menu--xs">
-        <li class="menu--item--xs"><a href="/pages/events.html">Events</a></li>
+        <li class="menu--item--xs"><a href="/pages/bsr.html#events">Events</a></li>
         <li class="menu--item--xs"><a class="menu--item--dropdown--xs">Qui sommes
             nous ?</a>
           <ul class="dropdown--menu--xs">
