--- a/pages/bsr.html
+++ b/pages/bsr.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="../index.js" defer></script>
   <link rel="stylesheet" href="../style.css" />
   <title>Document</title>
 </head>
@@ -34,7 +35,7 @@
       <button class="btn btn--menu icon--hamburger">
       </button>
       <ul class="menu--xs">
-        <li class="menu--item--xs"><a href="./events.html">Events</a></li>
+        <li class="menu--item--xs"><a href="./bsr#events.html">Events</a></li>
         <li class="menu--item--xs"><a class="menu--item--dropdown--xs">Qui sommes
             nous ?</a>
           <ul class="dropdown--menu--xs">
