--- a/pages/contact.html
+++ b/pages/contact.html
@@ -35,7 +35,7 @@
       <button class="btn btn--menu icon--hamburger">
       </button>
       <ul class="menu--xs">
-        <li class="menu--item--xs"><a href="./events.html">Events</a></li>
+        <li class="menu--item--xs"><a href="./bsr#events.html">Events</a></li>
         <li class="menu--item--xs"><a class="menu--item--dropdown--xs">Qui sommes
             nous ?</a>
           <ul class="dropdown--menu--xs">
