--- a/pages/bsr.html
+++ b/pages/bsr.html
@@ -74,33 +74,47 @@
     </section>
     <h1>EVENTS</h1>
     <section class="events">
-      <section class="event event--2023">
-        <img src="../assets/images/bsr/event_1.svg" alt="">
-        <h2>Fiestalina</h2>
-        <h2>Christmast Market</h2>
-      </section>
-      <section class="event"><img src="../assets/images/bsr/event_2.svg" alt="">
-        <h2>Fiestalina</h2>
-        <h2>Christmast Market</h2>
-      </section>
-      <section class="event"><img src="../assets/images/bsr/event_1.svg" alt="">
-        <h2>Fiestalina</h2>
-        <h2>Christmast Market</h2>
+      <div class="year">
+        <h2>2023</h2>
+        <h2>A venir</h2>
+      </div>
+      <section class="events--flex">
+        <section class="event event--2023">
+          <img src="../assets/images/bsr/event_1.svg" alt="">
+          <h2>DDDD</h2>
+          <h2>Christmast Market</h2>
+        </section>
+        <section class="event"><img src="../assets/images/bsr/event_2.svg" alt="">
+          <h2>Fiestalina</h2>
+          <h2>Christmast Market</h2>
+        </section>
+        <section class="event"><img src="../assets/images/bsr/event_1.svg" alt="">
+          <h2>Fiestalina</h2>
+          <h2>Christmast Market</h2>
+        </section>
       </section>
 
-      <section class="event  event--2022">
-        <img src="../assets/images/bsr/event_1.svg" alt="">
-        <h2>Fiestalina</h2>
-        <h2>Christmast Market</h2>
+      <div class="year">
+        <h2>2022</h2>
+        <h2 class="line-through">A venir</h2>
+      </div>
+      <section class="events--flex carousel">
+        <section class="event event--2023">
+          <img src="../assets/images/bsr/event_1.svg" alt="">
+          <h2>Fiestalina</h2>
+          <h2>Christmast Market</h2>
+        </section>
+        <section class="event"><img src="../assets/images/bsr/event_2.svg" alt="">
+          <h2>Fiestalina</h2>
+          <h2>Christmast Market</h2>
+        </section>
+        <section class="event"><img src="../assets/images/bsr/event_1.svg" alt="">
+          <h2>Fiestalina</h2>
+          <h2>Christmast Market</h2>
+        </section>
       </section>
-      <section class="event"><img src="../assets/images/bsr/event_2.svg" alt="">
-        <h2>Fiestalina</h2>
-        <h2>Christmast Market</h2>
-      </section>
-      <section class="event"><img src="../assets/images/bsr/event_1.svg" alt="">
-        <h2>Fiestalina</h2>
-        <h2>Christmast Market</h2>
-      </section>
+
+
     </section>
   </main>
   <footer>
