--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         Un printemps fertile
       </h1>
       <figure>
-        <img src="./assets/images/hero_picture.svg" alt="" class="hero--picture" />
+        <img src="./assets/images/hero_picture.png" alt="" class="hero--picture" />
         <figcaption>
           <h1>Un printemps fertile</h1>
           <a href="./pages/products.html" class="btn btn--primary">Commander</a>
