--- a/pages/bsr.html
+++ b/pages/bsr.html
@@ -90,26 +90,18 @@
             <img src="../assets/images/bsr/event_1.svg" alt="" width="100%">
             <h2>Fiestalina</h2>
             <h2>Christmast Market</h2>
-            <div class="carousel__snapper">
-              <a href="#carousel__slide3" class="carousel__prev">Go to last slide</a>
-              <a href="#carousel__slide2" class="carousel__next">Go to next slide</a>
-            </div>
+
           </li>
           <li id="carousel__slide2" tabindex="0" class="carousel__slide">
             <img src="../assets/images/bsr/event_2.svg" alt="">
-            <h2>Fiestalina</h2>
-            <h2>Christmast Market</h2>
-            <div class="carousel__snapper"></div>
-            <a href="#carousel__slide1" class="carousel__prev">Go to previous slide</a>
-            <a href="#carousel__slide3" class="carousel__next">Go to next slide</a>
+            <h2>Il Cinema Sotto le Stelle </h2>
+            <h2>La Restanza</h2>
+
           </li>
           <li id="carousel__slide3" tabindex="0" class="carousel__slide">
             <img src="../assets/images/bsr/event_2.svg" alt="">
             <h2>Fiestalina</h2>
             <h2>Christmast Market</h2>
-            <div class="carousel__snapper"></div>
-            <a href="#carousel__slide2" class="carousel__prev">Go to previous slide</a>
-            <a href="#carousel__slide1" class="carousel__next">Go to next slide</a>
           </li>
         </ol>
       </section>
